# credit-risk

./: README.md  pyproject.toml
data/credit_risk_processed/: submission1.csv  submission2.csv  submission3.csv  submission4.csv  submission5.csv
deployment/: Dockerfile  app.py  requirements.txt  xgboost_model.pkl
notebooks/: credit_risk.ipynb
reports/: credit_card_balance_report.html  previous_application_report.html
src/data/: clean.py
src/models/: train_eval.py
src/stats/: test.py
src/visual/: plotting.py
