[project]
name = "tc"
version = "0.1.0"
description = "latest working packages for helper utils"
authors = [
    {name = "Mlovei"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "catboost (==1.2.7)",
    "ipython (==8.31.0)",
    "jupyter (==1.1.1)",
    "kaggle (==1.6.17)",
    "lightgbm (==4.5.0)",
    "matplotlib (==3.10.0)",
    "matplotlib-inline (==0.1.7)",
    "numpy (==1.26.4)",
    "pandas (==2.2.3)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.15.1)",
    "seaborn (==0.13.2)",
    "shap (==0.46.0)",
    "statsmodels (==0.14.4)",
    "tqdm (<4.65)",
    "xgboost (==3.0.0rc1)",
    "ydata-profiling (>=4.15.1,<5.0.0)",
    "selenium (>=4.30.0,<5.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "optuna-integration (>=4.2.1,<5.0.0)",

]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
